# Community-Shop

./: AdminStuff.cpp  AdminStuff.h  NewUser.cpp  NewUser.h  README.md  Stuff.cpp  UserEntrance.cpp  UserEntrance.h  UserLoad.cpp  UserLoad.h  UserStuff.cpp  UserStuff.h  courier.cpp  courier.h  database_manager.cpp  database_manager.h  main.cpp  menu.cpp  menu.h  order.cpp  order.h  point.cpp  point.h  point_manager.cpp  point_manager.h  storage.cpp  storage.h  time_manager.cpp  time_manager.h
Shop_server/: CMakeLists.txt
Shop_server/Shop_server/: CMakeLists.txt
docs/: Отчёт по курсовой работе.docx  Отчёт по курсовой.docx  презентация.pptx
test/test/: CMakeLists.txt  test.cpp
